src/objects/LifeEventsAssm__c.object
<CustomObject>
    <description>Assessment for CHOICES. 
     LEC Blake, Weathers, Nagy, Kaloupek, Charney, &amp; Keane, 1995</description>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aLifeEventsAssm</relationshipLabel>
        <relationshipName>LifeEventsAssm</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LEC_Q01__c</fullName>
        <description>Natural disaster (for example, flood, hurricane, tornado, earthquake)</description>
        <label>Natural disaster</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEC_Q02__c</fullName>
        <description>Fire or explosion</description>
        <label>Fire or explosion</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEC_Q03__c</fullName>
        <inlineHelpText>Transportation accident (for example, car accident, boat accident, train wreck, plane crash)</inlineHelpText>
        <label>Transportation accident</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>aLifeEventsAssm</label>
    <nameField>
        <label>LifeEventsAssm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aLifeEventsAssm</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>